--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "editorjs-html": "^2.1.0",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
@@ -44,6 +45,7 @@
     "mongoose": "^5.7.6",
     "morgan": "^1.9.1",
     "node-cron": "^2.0.3",
+    "node-fetch": "^2.6.1",
     "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
@@ -56,7 +58,8 @@
     "sitemap": "^6.1.5",
     "sitemap-generator": "^8.4.2",
     "stripe": "^8.43.0",
-    "suggestion": "^2.1.2"
+    "suggestion": "^2.1.2",
+    "unsplash-js": "^6.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
