--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.6.3",
-    "aws-sdk": "^2.553.0",
+    "aws-sdk": "^2.780.0",
+    "babel-cli": "^6.26.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "chart.js": "^2.9.3",
@@ -62,11 +63,12 @@
     "unsplash-js": "^6.3.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.4",
-    "@babel/core": "^7.6.4",
-    "@babel/node": "^7.6.3",
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/preset-env": "^7.6.3",
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/node": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-stage-2": "^7.8.3",
     "nodemon": "^1.19.4"
   }
 }
